--- a/vnc.html
+++ b/vnc.html
@@ -218,6 +218,15 @@
         </div>
 
     </div>
+
+    <script type="text/javascript">
+    if ((/touch=true/i).test(window.location.search)) {
+      window.novncOverrideTouch = true;
+    }
+    if ((/touch=false/i).test(window.location.search)) {
+      window.novncOverrideTouch = false;
+    }
+    </script>
     <script src="include/util.js"></script>
     <script src="include/ui.js"></script>
 
